fix: stabilize agenda controller tests and update service validations for EP3 closure